crates/ink/tests/ui/contract/fail/trait-message-selector-overlap-2.stderr
error[E0119]: conflicting implementations of trait `ink::reflect::DispatchableMessageInfo<1518209067_u32>` for type `contract::Contract`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:41:9
   |
36 |         fn message(&self) {}
   |         -- first implementation here
...
41 |         fn message(&self) {}
   |         ^^ conflicting implementation for `contract::Contract`

error[E0119]: conflicting implementations of trait `ink::codegen::TraitCallForwarderFor<1518209067_u32>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:39:5
   |
34 |     impl TraitDefinition1 for Contract {
   |     ---- first implementation here
...
39 |     impl TraitDefinition2 for Contract {
   |     ^^^^ conflicting implementation for `contract::_::CallBuilder`
